# rik_screener_tool

./: .gitignore  .mcp.json.example  README.md  download_data.py  example_statement_consistency.py  pyproject.toml  test_api.py  test_api_live.py  test_integration.py  test_smoke.py
rik_screener/: __init__.py  emta_screener.py  mcp_server.py
rik_screener/add_info/: __init__.py  company_age.py  emtak_descriptions.py  geographic_revenue.py  geographical_revenue.py  industry_codes.py  shareholder_data.py
rik_screener/api_workspace/: __init__.py  config_auth.py  data_processors.py  endpoints.py  main_orchestrator.py  report_scraper.py  soap_client.py  utils.py
rik_screener/criteria_setup/: calculations.py
rik_screener/criteria_setup/calculation_utils/: data_mergers.py  formula_engine.py  standard_formulas.py
rik_screener/df_prep/: general_filter.py  multi_year_merger.py
rik_screener/post_processing/: __init__.py  company_names.py  filtering.py  mcp_formatter.py
rik_screener/utils/: __init__.py  config.py  data_processing.py  file_operations.py  logging.py  translations.py
rik_screener/workflow/: config_validator.py  orchestrator.py
tests/: test_api_financial_statements.py
